--- a/index.html
+++ b/index.html
@@ -64,13 +64,13 @@ button {
 
 <body>
 
-<h1>🎂 Happy Birthday 🎉</h1>
+<h1>🎂 Happy Birthday TEJAAAA🎉</h1>
 <button onclick="openGift()">Click Me 🎁</button>
 
 <!-- First Popup -->
 <div class="modal" id="giftModal">
   <div class="modal-content">
-    <h2>🎁 A small gift for u 💝</h2>
+    <h2>🎁 A small gift for u VADINA from your somu💝</h2>
     <button onclick="openSwipe()">Next ➡️</button>
   </div>
 </div>
@@ -79,7 +79,7 @@ button {
 <div id="swipeScreen">
   👉 Swipe Right
   <div id="finalMsg">
-    💖 nenu niku dhorakadamey oka gift 🎁
+    💖 nenu niku dhorakadamey oka gift 😅🎁
   </div>
 </div>
 
@@ -109,3 +109,4 @@ document.addEventListener("touchend", e => {
 
 </body>
 </html>
+
